WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89860
[BlackBerry] 0-length response with no content-type shouldn't download
https://bugs.webkit.org/show_bug.cgi?id=89860
Summary
[BlackBerry] 0-length response with no content-type shouldn't download
Mary Wu
Reported
2012-06-25 02:20:46 PDT
For 0-length response with no content-type, should get the mimetype from extension, if still can't get valuable mimetype, set mimetype to text/plain in case it go to download. It's from internal RIM
bug 168419
.
Attachments
Patch
(2.16 KB, patch)
2012-06-25 18:48 PDT
,
Mary Wu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mary Wu
Comment 1
2012-06-25 18:48:06 PDT
Created
attachment 149421
[details]
Patch
Rob Buis
Comment 2
2012-06-26 08:20:03 PDT
Comment on
attachment 149421
[details]
Patch Looks good, Mary.
WebKit Review Bot
Comment 3
2012-06-27 23:10:07 PDT
Comment on
attachment 149421
[details]
Patch Clearing flags on attachment: 149421 Committed
r121410
: <
http://trac.webkit.org/changeset/121410
>
WebKit Review Bot
Comment 4
2012-06-27 23:10:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug