[BlackBerry] 0-length response with no content-type shouldn't download https://bugs.webkit.org/show_bug.cgi?id=89860

Reviewed by Rob Buis.

RIM PR# 168419

For 0-length response, if we can't get its mimetype from the filename,
we set the mimetype to "text/plain" instead of "application/octet-stream",
so it won't go to download.

Reviewed internally by Charles Wei.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::sendResponseIfNeeded):


Canonical link: https://commits.webkit.org/107978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121410 268f45cc-cd09-0410-ab3c-d52691b4dbfc